create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="card-block">
                         <h4 class="card-title text-xs-center">12 meter baan</h4>
                         <p class="card-text">De 12 meter baan is geschikt voor luchtbuksen wapens en alle vuurwapens tot .22.
-<br>Deze baan beschikt over een transporteur.</p>
+<br>Deze baan beschikt over een transporteur.<br><br></p>
                         
                     </div>
                 </div>
@@ -86,8 +86,8 @@
                     <div><img src="assets/images/25-mtr-2-267x200.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title text-xs-center">50 meter baan</h4>
-                        <p class="card-text">50 Meter baan, geschikt voor elk vuurwapen van elk caliber.
-<br>Deze baan beschikt niet niet over een transporteur</p>
+                        <p class="card-text">De 50 meter baan geschikt voor elk vuurwapen van elk caliber.
+<br>Deze baan beschikt niet over een transporteur.</p>
                         
                     </div>
                 </div>
