create github pages

--- a/contact.html
+++ b/contact.html
@@ -43,11 +43,11 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2" data-form-type="formoid">
-                <h2 class="mbr-section-title display-3 text-xs-center">Contact forumlier</h2>
+                <h2 class="mbr-section-title display-3 text-xs-center">Contact formulier</h2>
 
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Bedankt voor het invullen! we proberen zo snel mogelijk te reageren.</div></div>
-                <form action="https://mobirise.com/" method="post" data-form-title="Contact forumlier">
-                    <input type="hidden" value="O8Bpkr0NwjxxaxiNqFTerFbOPjkhDijSV2uYDollieJBRbYkjI5xQqnKdnhQq44wyhBW7fwMBUsdeyfLskiV1tQTtaz7xolFBF2HpuGUA4/q0uQ4D7jGlJM9SBaBBHCx" data-form-email="true">
+                <form action="https://mobirise.com/" method="post" data-form-title="Contact formulier">
+                    <input type="hidden" value="ITJZ+602S+BuQkKFKurYgSxnjM0guZzyS5sG9xs9AkH5GuGPHQorppDcHP3qv3p9ZnqjCMkNfa9+sZe1NVt0Gf1jkWuwH8MzY7KCnaO+9fyP9Cn+ABlJeZL9WoDSKTdr" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control" name="name" required="" placeholder="Naam*" data-form-field="Name">
                     </div>
