create github pages

--- a/index.html
+++ b/index.html
@@ -20,23 +20,7 @@
   
 </head>
 <body>
-  <div id="menu-0" custom-code="true" data-rv-view="0"><nav class="navbar navbar-light mbr-navbar navbar-fixed-top" data-rv-view="0" style="background-color: rgb(248, 248, 246);">
-    <div class="container">
-        <button class="navbar-toggler pull-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
-            <div class="hamburger-icon"></div>
-        </button>
-
-        <div class="clearfix"></div>
-        <div class="collapse navbar-toggleable-sm" id="exCollapsingNavbar2">
-            <span class="navbar-logo"><a href="index.html"><img src="assets/images/mbr-1890x1920.jpg" alt="sv-amstelstad"></a></span>
-            <span><a class="navbar-brand text-primary mbr-editable-button" href="https://mobirise.com">SV Amstelstad</a></span>
-
-            
-
-            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link mbr-editable-menu-item" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link mbr-editable-menu-item" href="regelement.html">Regelement</a></li><li class="nav-item"><a class="nav-link mbr-editable-menu-item" href="contact.html">Contact</a></li></ul>
-        </div>
-    </div>
-</nav></div>
+  <div id="menu-0" custom-code="true" data-rv-view="0"></div>
 
 <section class="mbr-section mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-i" data-rv-view="2" style="background-image: url(assets/images/mbr-1920x1280.jpg);">
     <div class="mbr-table-cell">
