--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         <div class="clearfix"></div>
         <div class="collapse navbar-toggleable-sm" id="exCollapsingNavbar2">
             <span class="navbar-logo"><a href="index.html"><img src="assets/images/mbr-1890x1920.jpg" alt="sv-amstelstad"></a></span>
-            <span><a class="navbar-brand text-primary" href="https://mobirise.com">SV Amstelstad</a></span>
+            <span><a class="navbar-brand text-primary" href="index.html">SV Amstelstad</a></span>
 
             
 
@@ -47,7 +47,7 @@
 
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Bedankt voor het invullen! we proberen zo snel mogelijk te reageren.</div></div>
                 <form action="https://mobirise.com/" method="post" data-form-title="Contact formulier">
-                    <input type="hidden" value="ITJZ+602S+BuQkKFKurYgSxnjM0guZzyS5sG9xs9AkH5GuGPHQorppDcHP3qv3p9ZnqjCMkNfa9+sZe1NVt0Gf1jkWuwH8MzY7KCnaO+9fyP9Cn+ABlJeZL9WoDSKTdr" data-form-email="true">
+                    <input type="hidden" value="CS8JWRTxQxTTZMASuYlInxgcquBIHM88DYIL8i3VfqxTBkqegl9uvE1v1UOsz4faDSvH1Kfpe//cHLKwFMV03r84b3Y02JrcG8VIHpfhHY3N1Of+RKvDmu6Jg4TGju/X" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control" name="name" required="" placeholder="Naam*" data-form-field="Name">
                     </div>
