--- a/page3.html
+++ b/page3.html
@@ -29,7 +29,7 @@
         <div class="clearfix"></div>
         <div class="collapse navbar-toggleable-sm" id="exCollapsingNavbar2">
             <span class="navbar-logo"><a href="index.html"><img src="assets/images/mbr-1890x1920.jpg" alt="sv-amstelstad"></a></span>
-            <span><a class="navbar-brand text-primary" href="https://mobirise.com">SV Amstelstad</a></span>
+            <span><a class="navbar-brand text-primary" href="index.html">SV Amstelstad</a></span>
 
             
 
